--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,10 @@
 </head>
 <body>
   <app-root></app-root>
+  <!-- FIREBASE -->
+  <!-- Firebase App is always required and must be first -->
+  <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-app.js"></script>
+  <!-- Add additional services that you want to use -->
+  <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-database.js"></script>
 </body>
 </html>
